# enib-project

./: .~lock.connexion_capteur.odt#  CMakeLists.txt  README  README.md  defs.h  main.c  makefile  makefile2  trame.ods
_build/: Makefile
docs/: connexion_capteur.odt
include/: base.h  crsUtils.h
include/camera/: fb.h
include/drivers/: semaphore.h  timer.h  xbee_serial.h
include/sensor/: sensor_client.h  sensor_process.h  sensor_struct.h
include/websocket/: serveur_socket.h  socket_function.h
include/zigbee/: xbee_client.h  xbee_server.h  xbee_struct.h
src/: main.c
src/camera/: CMakeLists.txt  fb.c
src/drivers/: CMakeLists.txt  semaphore.c  timer.c  xbee_serial.c
src/sensor/: CMakeLists.txt  semaphore.c  sensor_client.c  sensor_process.c
src/websocket/: CMakeLists.txt  serveur_socket.c  socket_function.c
src/zigbee/: CMakeLists.txt  xbee_client.c  xbee_server.c
test/: fpga.c  memoire_partage.c  send.c  send2.c  sensor.c  serial.c  server.c  thread.c  time.c  websocket.c
web_server/: lighttpd.conf  start_server.sh
web_server/www/: echo.html  gauge.js  index.html  led.html  style.css  test5.html  test6.html  ws.html  ws2.html  ws3.html
web_server/www/cgi-bin/: cgiutils.lua  control_ds7  control_ds7.lua  get-name  get-ps  test.sh  test1.lua  test2.lua  test3.lua  test4.lua  test5.lua  test6.lua
web_server/www/echo_fichiers/: echo.js
